--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card {
+  @apply bg-sky-200 rounded-lg shadow-lg relative overflow-hidden;
+}
