Delete Banner2-1.jpg and update styles.css and index.html

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,8 @@
 .card {
   @apply bg-sky-200 rounded-lg shadow-lg relative overflow-hidden;
 }
+
+/* img {
+  width: 800px;
+  margin: 0 auto;
+} */
